--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Aylin Kallmayer"
   avatar           : "profilepic.png"
-  bio              : "PhD student at [Scene Grammar Lab](https://www.scenegrammarlab.com)"
+  bio              : "PhD student at https://www.scenegrammarlab.com"
   location         : "Frankfurt, Germany"
   employer         :
   pubmed           :
